# seclog_ae

./: .gitignore  ACFuncAnalyzer.h  AceInstrument.cpp  AceInstrument.h  CMakeLists.txt  Common.h  Config.h  DGFuncAnalyzer.h  DataDependencyAnalyzer.h  DataFlowAnalysis.h  DepGraph.h  LogicRelationAnalysis.h  MyCallGraph.h  ResultCheckFunc.h  Struct.h  Utils.cpp  Utils.h  build_llvm.sh  compile-software.md  copy_src_bcfiles.sh  readme.md  run_all.sh  run_sliced.sh
conf_files/: cherokee-admin.conf  haproxy.conf  httpd.conf  msqld.conf  nfsd.conf  postfix-smtpd.conf  postgres.conf  proftpd.conf  redis-server.conf  slapd.conf  squid.conf  test_branch.conf  test_complex_return.conf  test_func_pointer.conf  test_insert_branch.conf  test_releatParam.conf  test_struct_param.conf  vsftpd.conf
conf_files/dir_checkfiles/: cherokee-admin.func  haproxy.func  httpd copy.func  httpd.func  msqld.func  nfsd.func  postgres.func  proftpd.func  redis-server.func  slapd.func  squid.func  test_branch.func  test_complex_return.func  test_exit.func  test_releatParam.func  test_struct_param.func  vsftpd copy.func  vsftpd.func
conf_files/dir_checkfiles/postfix/: smtpd.func
conf_files/dir_exitfiles/: test_exit.exfunc  vsftpd.exfunc
conf_files/dir_libcallfiles/: cherokee-admin.libfunc  haproxy.libfunc  httpd.libfunc  msqld.libfunc  nfsd.libfunc  postgres.libfunc  proftpd.libfunc  redis-server.libfunc  test_branch.libfunc  vsftpd.libfunc
conf_files/dir_libcallfiles/postfix/: smtpd.libfunc
conf_files/dir_structcheckfiles/: haproxy.func  httpd.func  nfsd.func  test_func_pointer.func
dg/: BBlockBase.cpp  BBlocksBuilder.h  BFS.h  CMakeLists.txt  DFS.h  DG2Dot.h  DependenceGraph.h  MemoryState.h  Node.h  Offset.cpp  Offset.h  SCC.h  Slicing.h
dg/ADT/: DisjunctiveIntervalMap.h  IntervalsList.h
dg/ControlDependence/: ControlDependenceAnalysisOptions.h
dg/DataDependence/: DataDependence.h  DataDependenceAnalysisImpl.h  DataDependenceAnalysisOptions.h
dg/Dominators/: DominanceFrontiers.h  PostDominanceFrontiers.h
dg/MemorySSA/: Definitions.cpp  Definitions.h  DefinitionsMap.h  MemorySSA.cpp  MemorySSA.h  ModRef.cpp  ModRef.h
dg/PointerAnalysis/: MemoryObject.h  PSNode.h  Pointer.cpp  Pointer.h  PointerAnalysis.cpp  PointerAnalysis.h  PointerAnalysisOptions.h  PointerGraph.h  PointerGraphValidator.cpp  PointerGraphValidator.h  PointsToSet.cpp  PointsToSet.h
dg/PointerAnalysis/PointsToSets/: AlignedPointerIdPointsToSet.h  AlignedSmallOffsetsPointsToSet.h  OffsetsSetPointsToSet.h  PointerIdPointsToSet.h  SeparateOffsetsPointsToSet.h  SimplePointsToSet.h  SmallOffsetsPointsToSet.h
dg/ReadWriteGraph/: DefSite.h  RWBBlock.h  RWNode.h  ReadWriteGraph.cpp  ReadWriteGraph.h
dg/SystemDependenceGraph/: DepDGElement.h  DependenceGraph.cpp  SystemDependenceGraph.h
dg/legacy/: BFS.h  DFS.h  DataFlowAnalysis.h  NodesWalk.h
dg/llvm/: LLVMAnalysisOptions.h  LLVMDG2Dot.h  LLVMDGAssemblyAnnotationWriter.h  LLVMDGVerifier.cpp  LLVMDependenceGraph.cpp  LLVMDependenceGraph.h  LLVMDependenceGraphBuilder.h  LLVMNode.cpp  LLVMNode.h  LLVMSlicer.h  SummaryEdges.cpp  llvm-utils.h
dg/llvm/CallGraph/: CallGraph.h
dg/llvm/ControlDependence/: Block.cpp  ControlDependence.cpp  ControlDependence.h  GraphBuilder.cpp  InterproceduralCD.cpp  InterproceduralCD.h  LLVMControlDependenceAnalysisImpl.h  LLVMControlDependenceAnalysisOptions.h  NTSCD.cpp  NTSCD.h  SCD.cpp  SCD.h
dg/llvm/DataDependence/: DataDependence.h  LLVMDataDependenceAnalysisOptions.h
dg/llvm/DataDependenceAnalysis/: LLVMDataDependenceAnalysis.cpp
dg/llvm/DefUse/: DefUse.cpp  DefUse.h
dg/llvm/Dominators/: Dominators.h  PostDominators.cpp
dg/llvm/ForkJoin/: ForkJoin.h
dg/llvm/PointerAnalysis/: Block.cpp  CMakeLists.txt  Calls.cpp  Constants.cpp  DGPointerAnalysis.h  Globals.cpp  Instructions.cpp  Interprocedural.cpp  LLVMPointerAnalysisOptions.h  LLVMPointsToSet.h  PointerAnalysis.cpp  PointerAnalysis.h  PointerGraph.cpp  PointerGraph.h  PointerGraphValidator.cpp  PointerGraphValidator.h  SVFPointerAnalysis.h  Structure.cpp  Threads.cpp
dg/llvm/ReadWriteGraph/: Calls.cpp  Instructions.cpp  LLVMReadWriteGraphBuilder.cpp  LLVMReadWriteGraphBuilder.h
dg/llvm/SystemDependenceGraph/: Dependencies.cpp  SDG2Dot.cpp  SDG2Dot.h  SystemDependenceGraph.cpp  SystemDependenceGraph.h  SystemDependenceGraphBuilder.h
dg/llvm/ThreadRegions/include/Graphs/: ControlFlowGraph.h  ThreadRegion.h
dg/llvm/ThreadRegions/sources/: CMakeLists.txt  ThreadRegion.cpp
dg/llvm/ThreadRegions/sources/Graphs/: CriticalSectionsBuilder.cpp  GraphBuilder.cpp
dg/llvm/ThreadRegions/sources/Nodes/: JoinNode.cpp  Node.cpp
dg/llvm/ValueRelations/: Graph.h  ValueRelations.h  ValueRelationsAnalysis.h  getValName.h
dir_bcfiles/: msqld.bc  smtpd.bc  test_branch.bc  test_branch.cpp  test_complex_return.bc  test_complex_return.cpp  test_exit.bc  test_exit.cpp  test_foo.bc  test_foo.c  test_func_pointer.bc  test_func_pointer.c  test_hello.bc  test_hello.cpp  test_insert_branch.bc  test_insert_branch.cpp  test_releatParam.bc  test_releatParam.c  test_result_check.bc  test_result_check.c  test_struct_param.bc  test_struct_param.c
output/: output_parser.py
results/lib-calls/: httpd.csv.withlib  vsftpd.csv.withoutlib
scripts/: make_pass.sh  make_pass2.sh  opt_exec.sh  opt_exec2.sh
util/: Container.h  EnhanceLog.h
